Mon Aug  8 10:57:32 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_dcps.idl:
        * connectors/dds4ccm/impl/ndds/convertors/ResourceLimitsQosPolicy.h:
          Provide access to some RTI specific QoS values

Mon Aug  8 10:53:42 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Component_Handler.cpp:
          When we catch an exception log for which instance

Mon Aug  8 09:04:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ndds_idltocpp.mpb:
          Don't generate CDR streaming operations

Mon Aug  8 08:35:38 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ndds_idltocpp.mpb:
          Don't generate arg traits, not needed for datatypes that are only
          are intended to go through local interfaces

        * connectors/dds4ccm/idl/dds_rtf2_dcps.idl:
          Add include open OpenSplice

Fri Jul 29 14:17:56 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciao/Containers/Container_Base_T.cpp:

          unfuzz.

Wed Jul 27 08:42:34 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Containers/Container_Base_T.cpp:

          Fixed some errors in the logging messages that would cause segfaults
          on some platforms.

Wed Jun 29 19:12:21 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.cpp:
        * connectors/dds4ccm/impl/InstanceHandleManager_T.cpp:
        * connectors/dds4ccm/impl/Reader_T.cpp:
          Extended portability and improved some error handling
